assets/css/publications/publications.css
.pub-year {
    color: grey;
    font-family: 'Inter', sans-serif;
    text-transform: uppercase;
    letter-spacing: 0em;
    font-weight: 500;
    font-size: 16pt;
}

.pub-item {
    display: flex;
    align-items: flex-start;
    gap: 20px;
    margin-bottom: 30px;
}

.pub-item {
    display: flex;
    gap: 20px;
    padding: 10px;
    border-radius: 10px;
    transition: background 0.2s ease;
}

.pub-link:hover .pub-item {
    background: #f5f5f5;
    cursor: pointer;
}

.pub-img-container {
    /* use width 180 height 140 for graphical abstract */
    /* use width 110 height 140 for journal cover */
    width: 110px;
    height: 140px;
    border-radius: 6px;
    overflow: hidden;
    flex-shrink: 0;
    background: white; /* padding color */
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid #ddd;
}

.pub-img {
    width: 100%;
    height: 100%;
    object-fit: cover; /* contain: puts margins; cover: fills box */
}

.pub-text h3 {
    margin: 0 0 6px;
    font-size: 1.05rem;
}

.pub-text p {
    margin: 0 0 6px;
    font-size: 0.95rem;
}

/* TAGS */

.pub-tags {
    margin-top: 1rem;
}

.pub-tag {
    padding: 2px 8px; /* padding of words from tag bubble */
    margin-right: 6px; /* margin between different tags */
    font-size: 0.75rem;
    border-radius: 6px;

    /* default tag styling */
    background-color: #eee;
    color: #333;
}

/* Specific tags */
/* these have a specific colour/styling */

.pub-tag-article {
    background-color: #dbeafe;
    color: #1e3a8a;
}

.pub-tag-abstract {
    background-color: #fef3c7;
    color: #92400e;
}

.pub-tag-literature-review {
    background-color: #dcfce748;
    border: 1px solid #166534;
    color: #166534;
}

